# libaccl

./: Doxyfile  LICENSE  README.adoc  configure.ac
src/: Makefile.am
src/CXX/: Makefile.am
src/CXX/libaccl/hash/: Makefile.am  linear.hxx
src/CXX/libaccl/pattern/: Makefile.am  hypersphere.hxx  points.hxx
src/CXX/unit_test/: Makefile.am
src/CXX/unit_test/hash/: Makefile.am  linear.cxx  linear.sh
src/CXX/unit_test/pattern/: Makefile.am  hypersphere.cxx  hypersphere.sh
